Ticket 14703 - Enhance Export API in CHEFS to support filtering based on status and updates
