# app/src/docs/v1.api-spec.yaml
@@ -337,17 +337,32 @@ paths:
           example: 1
           required: true
         - in: query
-          name: minDate
+          name: preference
           schema:
-            type: string
-          example: '2020-12-17T08:00:00Z'
-          description: Start date of period included in the export
+            type: object
+          example: '{ minDate=2020-12-17T08:00:00Z, maxDate=2020-12-17T08:00:00Z, updatedMinDate=2020-12-17T08:00:00Z, updatedMaxDate=2020-12-17T08:00:00Z }'
+          description: form submissions export preferences
         - in: query
-          name: maxDate
+          name: deleted
           schema:
-            type: string
-          example: '2020-12-17T08:00:00Z'
-          description: End date of period included in the export
+            type: Boolean
+          description: (optional) This optional parameter should be set to true if deleted records (submissions) need to be fetched 
+          example: false
+        - in: query
+          name: drafts
+          schema:
+            type: Boolean
+          description: (optional) This optional parameter should be set to true if draft records (submissions) need to be fetched
+          example: false
+        - in: query
+          name: columns
+          schema:
+            type: array
+          description: (optional) List of form level columns to be include
+          example:
+            - draft,
+            - deleted,
+            - updatedAt
       responses:
         '200':
           description: Export file created for download
@@ -3168,7 +3183,7 @@ components:
               type: String
               description: default value is submissions and should be changed
               example: submissions
-            preferences:
+            preference:
               type: object
               description: form submissions export preferences
               example: { minDate, maxDate }
