# app/src/forms/common/models/views/submissionData.js
@@ -21,6 +21,15 @@ class SubmissionData extends Model {
           query.where('createdAt', '<=', maxDate);
         }
       },
+      filterUpdatedAt(query, minDate, maxDate) {
+        if (minDate && maxDate) {
+          query.whereBetween('updatedAt', [minDate, maxDate]);
+        } else if (minDate) {
+          query.where('updatedAt', '>=', minDate);
+        } else if (maxDate) {
+          query.where('updatedAt', '<=', maxDate);
+        }
+      },
       filterDeleted(query, value) {
         if (!value) {
           query.where('deleted', false);
